--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <!-- text-content -->
             <div>
-                <h1 class="text-5xl lg:text-7xl font-extrabold ">It's good <br>
+                <h1 class="text-4xl lg:text-7xl font-extrabold ">It's good <br>
                     tea time at The <br> Tea House</h1>
                     <br>
                     <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
@@ -68,7 +68,47 @@
             </div>
 
         </header>
-        
+
+        <!-- Our-feature-Section -->
+         <Section class="py-8 lg:py-28">
+            
+            <!-- Title -->
+             <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+             </div>
+
+             <!-- feature-image -->
+              <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <!-- Card-1 -->
+                <div class="text-center rounded-lg shadow-md overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+                <h3 class="text-xl font-bold">Milk Tea</h3>
+                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+              </div>
+
+                <!-- Card-2 -->
+                <div class="text-center rounded-lg shadow-md overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+                <h3 class="text-xl font-bold">Black Tea</h3>
+                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+              </div>
+
+                <!-- Card-3 -->
+                <div class="text-center rounded-lg shadow-md overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+                <h3 class="text-xl font-bold">Lemon Tea</h3>
+                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+              </div>
+
+                <!-- Card-4 -->
+                <div class="text-center rounded-lg shadow-md overflow-hidden">
+                <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+                <h3 class="text-xl font-bold">Green Tea</h3>
+                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+              </div>
+              </div>
+         </Section>
     </main>
 </body>
 
