--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
 
     <!-- main section -->
-    <main class="max-w-screen-xl mx-auto px-16 lg:px-28 ">
-        
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+
         <!-- Header-section -->
         <header class="md:flex pt-10 mb-20">
 
@@ -39,76 +39,124 @@
             <div>
                 <h1 class="text-4xl lg:text-7xl font-extrabold ">It's good <br>
                     tea time at The <br> Tea House</h1>
-                    <br>
-                    <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-                   <br>
-                   <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 text-white font-bold rounded-lg">Explore More <i class="-rotate-45
+                <br>
+                <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To
+                    Your Taste Buds.</p>
+                <br>
+                <button
+                    class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 text-white font-bold rounded-lg">Explore
+                    More <i class="-rotate-45
                      fa-solid fa-arrow-right"></i></button>
             </div>
 
             <!-- image-content-->
             <div>
                 <!-- image -->
-                 <div class="relative">
+                <div class="relative">
                     <img class="w-full" src="images/banner.png" alt="">
-                 </div>
+                </div>
 
-                 <!-- card -->
-                  <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg -mt-10">
+                <!-- card -->
+                <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg -mt-10">
 
                     <!-- icon -->
-                     <div><i class="fa-solid fa-star text-amber-500"></i></div>
+                    <div><i class="fa-solid fa-star text-amber-500"></i></div>
 
-                     <!-- text -->
-                     <div class="ml-3">
+                    <!-- text -->
+                    <div class="ml-3">
                         <h2 class="font-bold text-2xl">5.00</h2>
                         <p class="text-gray-500">Trust Pilot Ratings</p>
-                     </div>
-                  </div>
+                    </div>
+                </div>
             </div>
 
         </header>
 
         <!-- Our-feature-Section -->
-         <Section class="py-8 lg:py-28">
-            
-            <!-- Title -->
-             <div class="text-center mb-8">
-                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
-                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-             </div>
+        <Section class="py-8 lg:py-28">
 
-             <!-- feature-image -->
-              <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <!-- Title -->
+            <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+
+            <!-- feature-image -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Card-1 -->
                 <div class="text-center rounded-lg shadow-md overflow-hidden">
-                <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
-                <h3 class="text-xl font-bold">Milk Tea</h3>
-                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
-              </div>
+                    <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+                    <h3 class="text-xl font-bold">Milk Tea</h3>
+                    <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+                </div>
 
                 <!-- Card-2 -->
                 <div class="text-center rounded-lg shadow-md overflow-hidden">
-                <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
-                <h3 class="text-xl font-bold">Black Tea</h3>
-                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
-              </div>
+                    <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+                    <h3 class="text-xl font-bold">Black Tea</h3>
+                    <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+                </div>
 
                 <!-- Card-3 -->
                 <div class="text-center rounded-lg shadow-md overflow-hidden">
-                <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
-                <h3 class="text-xl font-bold">Lemon Tea</h3>
-                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
-              </div>
+                    <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+                    <h3 class="text-xl font-bold">Lemon Tea</h3>
+                    <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+                </div>
 
                 <!-- Card-4 -->
                 <div class="text-center rounded-lg shadow-md overflow-hidden">
-                <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
-                <h3 class="text-xl font-bold">Green Tea</h3>
-                <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
-              </div>
-              </div>
-         </Section>
+                    <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+                    <h3 class="text-xl font-bold">Green Tea</h3>
+                    <p class="text-gray-600">Creamer could be replaced <br> by fresh milk</p>
+                </div>
+            </div>
+        </Section c>
+
+        <!-- Great Tea section -->
+        <section class="mb-24">
+
+            <div class="grid grid-cols-1">
+                <!-- Image -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-4">
+
+                    <div class="h-30 bg-gradient-to-r from-red-100 to-red-50 rounded-lg">
+                    </div>
+
+                    <div class="bg-orange-50 row-span-2 rounded-lg">
+                        <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
+                    </div>
+
+                    <div class="bg-gray-100 row-span- rounded-lg">
+                        <img class="mx-auto my-5" src="images/fresh-2.png" alt="">
+                    </div>
+
+                    <div class="h-30 bg-gradient-to-r from-gray-300 to-gray-50 rounded-lg">
+                    </div>
+                </div>
+
+                <!-- Text -->
+                <div>
+                    <h1 class="text-3xl md:text-4xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+                    <p class="text-gray-600 max-w-xl mx-auto">The meaning of gong cha is chanese is to provide the best
+                        tea to emperor from all possessions . It represents the highest quality and self expectation.
+                        Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of good words
+                        of mouth and unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h1 class="text-xl font-bold mb-5 ">Unique Taste</h1>
+                    <p class="text-gray-600 max-w-xl mx-auto">A Unique and different style from other teapots gives a
+                        luxurious and minimalist impression</p>
+                    <br>
+                    <h1 class="text-xl font-bold mb-5 ">Premium Quality</h1>
+                    <p class="text-gray-600 max-w-xl mx-auto">Premium Quality that makes tea more elegant and more
+                        durable when you use it.</p>
+                </div>
+            </div>
+
+
+        </section>
     </main>
 </body>
 
